<resources>
    <string name="app_name">p3_7s21</string>
    <string name="titulop1">PROGRAMANDO EN ANDROID</string>
    <string name="descipimgp1">Logo Tesoem</string>
    <string name="titulop2">MENU DE OPCIONES</string>
    <string name="p2suma2num">SUMA DE 2 NUMEROS</string>
    <string name="p2resta2num">RESTA DE 2 NUMEROS</string>
    <string name="titulop3">SUMA DE 2 NUMEROS</string>
    <string name="p3textnum1">INGRESA EL PRIMER NUMERO</string>
    <string name="p3textnum1f">NUMERO 1</string>
    <string name="p3textnum2">INGRESA EL SEGUNDO NUMERO</string>
    <string name="p3textnum2f">NUMERO 2</string>
    <string name="p3btntext">CALCULAR</string>
    <string name="p3lbltext">RESULTADO DE LA SUMA</string>
    <string name="titulop4">RRESTA DE 2 NUMEROS</string>
    <string name="p4textnum1">INGRESA EL PRIMER NUMERO</string>
    <string name="p4textnum1f">NUMERO 1</string>
    <string name="p4textnum2">INGRESA EL SEGUNDO NUMERO</string>
    <string name="p4textnum2f">NUMERO 2</string>
    <string name="p4btntext">CALCULAR</string>
    <string name="p4lbltext">RESULTADO DE LA RESTA</string>
</resources>