<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Suma2numActivity">

    <EditText
        android:id="@+id/txtnum2p3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="36dp"
        android:autofillHints="num1"
        android:ems="10"
        android:hint="@string/p3textnum2f"
        android:inputType="number"
        android:textColorHint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/btnsumap3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="367dp"
        android:layout_height="72dp"
        android:layout_marginTop="76dp"
        android:text="@string/titulop3"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="277dp"
        android:layout_height="21dp"
        android:layout_marginBottom="56dp"
        android:text="@string/p3textnum1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtnum1p3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtnum1p3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:autofillHints="num1"
        android:ems="10"
        android:hint="@string/p3textnum1f"
        android:inputType="number"
        android:textColorHint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/p3textnum2"
        android:textColor="@color/black"
        android:textColorHint="@color/rojo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtnum2p3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnsumap3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="calcular"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/p3btntext" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p3lbltext"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="665dp" />

</androidx.constraintlayout.widget.ConstraintLayout>