<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/titulop2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/p2btnsuma"
        android:layout_width="301dp"
        android:layout_height="89dp"
        android:layout_marginTop="136dp"
        android:onClick="presionaBoton"
        android:text="@string/p2suma2num"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/p2btnresta"
        android:layout_width="309dp"
        android:layout_height="84dp"
        android:layout_marginTop="124dp"
        android:onClick="presionaBoton"
        android:text="@string/p2resta2num"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/p2btnsuma"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p2btnsuma"
        app:layout_constraintTop_toBottomOf="@+id/p2btnsuma"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>